# wingfoil

./: .dockerignore  .gitignore  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  PLAN-graph-dynamism.md  PLAN.md  README.md  SPEC.md  build_carousel.py  codecov.yml  examples  fail_log.txt  linkedin-post-draft.md  linkedin-post-draft.txt  plan.md  release-notes-2.1.1.txt  wingfoil-carousel-post.md  zmq-discovery-plan.md  zmq-plan.md
wingfoil/: .gitignore  Cargo.toml
wingfoil-derive/: Cargo.toml
wingfoil-derive/src/: lib.rs
wingfoil-next/: Cargo.toml
wingfoil-next-macros/: Cargo.toml
wingfoil-next-macros/src/: lib.rs
wingfoil-next/bench_support/: fanout_10x10.rs
wingfoil-next/benches/: custom_op.rs  fanout.rs  tiers.rs
wingfoil-next/examples/: async_source.rs  csv_adapter.rs  dual_mode.rs  ema_crossover.rs  fanout_10x10.rs  hello_graph.rs  lines_adapter.rs  odds_evens.rs  produce_async_feed.rs
wingfoil-next/examples/breadth_first/: README.md  main.rs
wingfoil-next/examples/feedback/: README.md  main.rs
wingfoil-next/examples/order_book/: README.md  main.rs
wingfoil-next/examples/run_mode/: README.md  main.rs
wingfoil-next/examples/statistics/: README.md  main.rs
wingfoil-next/src/: async_source.rs  burst.rs  channel.rs  compat.rs  fluent.rs  interp.rs  lib.rs  op.rs  ops.rs  stats.rs
wingfoil-next/src/adapters/: augurs.rs  cache.rs  common.rs  csv.rs  lines.rs  mod.rs
wingfoil-next/tests/: augurs_adapter.rs  busy_loop.rs  cache_adapter.rs  catalog.rs  catalog_ops.rs  channel.rs  common_adapter.rs  compat.rs  compiled_lifecycle_ops.rs  compiled_parity.rs  compiled_rolling_ops.rs  compiled_stateful_ops.rs  compiled_stateless_ops.rs  csv_adapter.rs  custom_op.rs  engine_semantics.rs  fallibility.rs  feedback.rs  island_scheduling.rs  lines_adapter.rs  macro_parity.rs  merge_tiebreak.rs  nested_islands.rs  parity_bugs.rs  produce_async.rs  repetition.rs  sparse_graph.rs  statistics.rs  statistics_cumulative.rs  statistics_rolling.rs  statistics_time_weighted.rs  statistics_time_weighted_windowed.rs  statistics_time_windowed.rs  trybuild.rs
wingfoil-next/tests/trybuild/: async_graph_fn.rs  async_graph_fn.stderr  fan_zero_branches.rs  fan_zero_branches.stderr  generic_graph_fn.rs  generic_graph_fn.stderr  map_n_nonliteral_count.rs  map_n_nonliteral_count.stderr  missing_return_type.rs  missing_return_type.stderr  reserved_prefix_name.rs  reserved_prefix_name.stderr  stream_param_by_value.rs  stream_param_by_value.stderr  unknown_combinator.rs  unknown_combinator.stderr  wiring_in_passthrough.rs  wiring_in_passthrough.stderr
wingfoil-python/: Cargo.toml  README.md  README.rst  build.md  pyproject.toml
wingfoil-python/docs/: README.md  api.rst  conf.py  index.rst  readme.rst
wingfoil-python/docs/api/: wingfoil.Node.rst  wingfoil.PyStream.rst  wingfoil.rst  wingfoil.ticker.rst
wingfoil-python/examples/: custom_stream.py  dataframe.py  deduplicate.py  delay_line.py  examples.py  iceoryx2_pubsub.py  kdb.py  latency.py  quick_start.py  zmq_pub.py  zmq_sub.py
wingfoil-python/examples/zmq/: README.md
wingfoil-python/python/wingfoil/: __init__.py  pandas_helpers.py  stream.py
wingfoil-python/src/: junk.txt  lib.rs  proxy_stream.rs  py_aeron.rs  py_augurs.rs  py_compiled.rs  py_csv.rs  py_element.rs  py_etcd.rs  py_fix.rs  py_fluvio.rs  py_graph_state.rs  py_iceoryx2.rs  py_kafka.rs  py_kdb.rs  py_latency.rs  py_otlp.rs  py_postgres.rs  py_prometheus.rs  py_redis.rs  py_stream.rs  py_web.rs  py_zmq.rs  types.rs
wingfoil-python/tests/: test_aeron.py  test_augurs.py  test_compiled.py  test_csv.py  test_custom_stream.py  test_etcd.py  test_fix.py  test_fluvio.py  test_iceoryx2.py  test_kafka.py  test_kdb.py  test_latency.py  test_otlp.py  test_pandas.py  test_postgres.py  test_prometheus.py  test_redis.py  test_streams.py  test_web.py  test_web_bindings.py  test_zmq.py
wingfoil-python/wingfoil/: __init__.py
wingfoil-wasm/: Cargo.toml
wingfoil-wasm/src/: lib.rs
wingfoil-wire-types/: Cargo.toml
wingfoil-wire-types/src/: lib.rs
wingfoil/benches/: README.md  dyn_vs_generic.md  dyn_vs_generic.rs  graph.rs  iceoryx2.rs  iceoryx2_modes.rs  nanotime.rs
wingfoil/benches/aeron/: allocation_tracking.rs  publication_latency.rs  subscription_throughput.rs  transceiver.rs
wingfoil/benches/bfs_vs_dfs/: README.md  async_streams.rs  diagram.py  plot.py  reactive.rs  wingfoil.rs
wingfoil/benches/dyn_vs_generic/: typenames.rs
wingfoil/examples/: README.md  aeron_external_source.rs  aeron_mdc_discovery.rs  aeron_status_circuit_breaker.rs  grafana_metrics.rs  otlp_metrics.rs
wingfoil/examples/aeron/: README.md  dual_rc_pattern.rs  fan_out_pattern.rs  main.rs  status_circuit_breaker.rs  subscriber_node_reference_access.rs  subscriber_node_value_access.rs
wingfoil/examples/async/: README.md  main.rs
wingfoil/examples/augurs/: README.md  main.rs
wingfoil/examples/breadth_first/: README.md  main.rs
wingfoil/examples/candle/: README.md  main.rs
wingfoil/examples/circuit_breaker/: README.md  main.rs
wingfoil/examples/codegen/: main.rs
wingfoil/examples/crossover/: README.md  main.rs
wingfoil/examples/dynamic/: README.md  market_data.rs  tests.rs
wingfoil/examples/dynamic_graph/: demux.rs  main.rs  source.rs
wingfoil/examples/etcd/: README.md  main.rs
wingfoil/examples/feedback/: README.md  main.rs
wingfoil/examples/fix/: LMAX.md  README.md  fix_echo_server.rs  fix_loopback.rs  lmax_demo.rs  lmax_instruments.rs
wingfoil/examples/fluvio/: README.md  main.rs
wingfoil/examples/grafana/: README.md  main.rs  run.sh
wingfoil/examples/iceoryx2/: README.md  bytes.rs  pub.rs  sub.rs
wingfoil/examples/kafka/: README.md  main.rs
wingfoil/examples/kdb/: README.md  main.rs
wingfoil/examples/kdb_read/: README.md  main.rs
wingfoil/examples/latency/: README.md  pub.rs  shared.rs  sub.rs
wingfoil/examples/latency_e2e/: DOCKER_BUILD.md  Dockerfile.fix_gw  (+10 more)
wingfoil/src/: bencher.rs  codegen.rs  graph.rs  latency.rs  lib.rs  time.rs  types.rs
wingfoil/test_data/: example_out.csv  simple.csv
wingfoil/tests/: codegen.rs
(+422 files in other folders)
