
[workspace]
members = [
    "wingfoil",
    "wingfoil-python",    
]
resolver = "3"


[workspace.dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "2.0", features = ["full"] }
chrono = "0.4"

[profile.release]
opt-level = 3       # Options: 0, 1, 2, 3, "s" (size), "z" (min size), 3 is max speed
debug = false           # Include debug info for profiling (perf, hotspot)
lto = "fat"            # Link Time Optimization (fat = max optimization)
codegen-units = 1      # Single codegen unit = better optimizations
panic = "abort"        # Smaller binary + faster panics
overflow-checks = false # Disable integer overflow checks for speed


