[package]
name = "wingfoil-next"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
description = "Design prototype: dual-mode (interpreted + compiled) stream graphs with single-sourced op semantics"

[lints]
workspace = true

[dependencies]
# Reuses the clock/scheduler core (`codegen::Kernel`), `NanoTime` and the
# run-mode types. Everything else — the Op trait, ops, and engines — is
# from-scratch.
wingfoil = { path = "../wingfoil" }
wingfoil-next-macros = { path = "../wingfoil-next-macros" }
anyhow = { workspace = true }

# `async` feature: the `produce_async` ergonomic source (async closure →
# timestamped burst stream) over the channel. Optional so the core engine
# stays executor-free.
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
], optional = true }

[features]
default = []
async = ["dep:tokio", "dep:futures"]

[[example]]
name = "async_source"
required-features = ["async"]

[[example]]
name = "produce_async_feed"
required-features = ["async"]
