[package]
name = "wingfoil-next"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
description = "Design prototype: dual-mode (interpreted + compiled) stream graphs with single-sourced op semantics"

[lints]
workspace = true

[dependencies]
# Reuses the clock/scheduler core (`codegen::Kernel`), `NanoTime` and the
# run-mode types. Everything else — the Op trait, ops, and engines — is
# from-scratch.
wingfoil = { path = "../wingfoil" }
wingfoil-next-macros = { path = "../wingfoil-next-macros" }
anyhow = { workspace = true }

# `async` feature: the `produce_async` ergonomic source (async closure →
# timestamped burst stream) over the channel. Optional so the core engine
# stays executor-free.
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
], optional = true }

# `csv` feature: the serde-typed CSV replay source + file sink adapter. Optional
# so the default build stays dependency-free. Versions mirror the classic
# `wingfoil` crate's csv adapter.
csv = { version = "1.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-aux = { version = "4.7.0", optional = true }

[dev-dependencies]
# Compile-fail tests pinning the `graph!` macro's key error paths.
trybuild = "1"
criterion = "0.8.1"

[features]
default = []
async = ["dep:tokio", "dep:futures"]
csv = ["dep:csv", "dep:serde", "dep:serde-aux"]

[[example]]
name = "async_source"
required-features = ["async"]

[[example]]
name = "produce_async_feed"
required-features = ["async"]

[[bench]]
name = "fanout"
harness = false

[[bench]]
name = "custom_op"
harness = false

[[example]]
name = "csv_adapter"
required-features = ["csv"]

# Ports of the classic `wingfoil/examples/` onto the next engine's fluent API.
# Each lives in its own directory with a README, mirroring the classic layout.
[[example]]
name = "breadth_first"
path = "examples/breadth_first/main.rs"

[[example]]
name = "feedback"
path = "examples/feedback/main.rs"

[[example]]
name = "run_mode"
path = "examples/run_mode/main.rs"

[[example]]
name = "order_book"
path = "examples/order_book/main.rs"

[[example]]
name = "statistics"
path = "examples/statistics/main.rs"
