[package]
name = "wingfoil-next"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
description = "Design prototype: dual-mode (interpreted + compiled) stream graphs with single-sourced op semantics"

[lints]
workspace = true

[dependencies]
# Reuses the clock/scheduler core (`codegen::Kernel`), `NanoTime` and the
# run-mode types. Everything else — the Op trait, ops, and engines — is
# from-scratch.
wingfoil = { path = "../wingfoil" }
wingfoil-next-macros = { path = "../wingfoil-next-macros" }
anyhow = { workspace = true }

# `async` feature: the `produce_async` ergonomic source (async closure →
# timestamped burst stream) over the channel. Optional so the core engine
# stays executor-free.
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
], optional = true }

# `csv` feature: the serde-typed CSV replay source + file sink adapter. Optional
# so the default build stays dependency-free. Versions mirror the classic
# `wingfoil` crate's csv adapter.
csv = { version = "1.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-aux = { version = "4.7.0", optional = true }

# `cache` feature: an internal content-addressed on-disk result cache (no graph
# nodes) — the port of the classic `wingfoil::adapters::cache` infrastructure.
# Versions mirror the classic `wingfoil` crate's kdb-gated cache module.
sha2 = { version = "0.10", optional = true }
bincode = { version = "1.3.3", optional = true }
log = { workspace = true, optional = true }

[dev-dependencies]
# Compile-fail tests pinning the `graph!` macro's key error paths.
trybuild = "1"
criterion = "0.8.1"

[features]
default = []
async = ["dep:tokio", "dep:futures"]
csv = ["dep:csv", "dep:serde", "dep:serde-aux"]
# Mirrors the classic `kdb` feature's cache deps (sha2 + bincode + tokio/fs).
# The cache serializes `T` values, so it also needs `serde`.
cache = ["dep:sha2", "dep:bincode", "dep:log", "dep:serde", "dep:tokio", "tokio/fs"]

[[example]]
name = "async_source"
required-features = ["async"]

[[example]]
name = "produce_async_feed"
required-features = ["async"]

[[bench]]
name = "fanout"
harness = false

[[bench]]
name = "custom_op"
harness = false

[[example]]
name = "csv_adapter"
required-features = ["csv"]
