[package]
name = "wingfoil-python"
version = "4.3.2"
authors = ["wingfoil@wingfoil.io"]
edition = "2024"
publish = ["wingfoil", "crates-io"]
license = "Apache-2.0"
keywords = ["graph", "stream", "dag", "trading", "python"]
homepage = "https://github.com/wingfoil-io/wingfoil/tree/main/wingfoil-python"
documentation = "https://docs.rs/wingfoil-python"
description = "python bindings for wingfoil - graph based stream processing framework"

[lib]
name = "wingfoil"
crate-type = ["cdylib"]

[features]
default = ["etcd"]
etcd = ["wingfoil/etcd"]
iceoryx2-beta = ["wingfoil/iceoryx2-beta"]

[dependencies]

# parent
wingfoil = { path = "../wingfoil", features = ["csv", "kdb", "zmq", "etcd", "fluvio", "prometheus", "otlp", "fix", "web", "kafka"] }

# workspace deps
anyhow = {workspace = true}
chrono = {workspace = true}
derive_more = {workspace = true}
env_logger = {workspace = true}
lazy_static = {workspace = true}
log = {workspace = true}
thiserror = {workspace = true}

# local deps
pyo3 = { version = "0.27", features = ["extension-module", "serde"] }
kdb-plus-fixed = { version = "0.5.0", features = ["ipc"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }


[package.metadata.maturin]
name = "wingfoil"
