[package]
name = "wingfoil-python"
version = "6.0.2"
authors = ["wingfoil@wingfoil.io"]
edition = "2024"
rust-version.workspace = true
publish = ["wingfoil", "crates-io"]
license = "Apache-2.0"
keywords = ["graph", "stream", "dag", "trading", "python"]
homepage = "https://github.com/wingfoil-io/wingfoil/tree/main/wingfoil-python"
documentation = "https://docs.rs/wingfoil-python"
description = "python bindings for wingfoil - graph based stream processing framework"

[lib]
name = "wingfoil"
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = ["etcd"]
etcd = ["wingfoil/etcd"]
iceoryx2 = ["wingfoil/iceoryx2"]
aeron = ["wingfoil/aeron"]

[dependencies]

# parent
wingfoil = { path = "../wingfoil", features = ["csv", "kdb", "zmq", "etcd", "fluvio", "prometheus", "otlp", "fix", "web", "kafka"] }

# workspace deps
anyhow = {workspace = true}
chrono = {workspace = true}
derive_more = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}
thiserror = {workspace = true}

# local deps
pyo3 = { version = "0.27", features = ["extension-module", "serde"] }
kdb-plus-fixed = { version = "0.5.0", features = ["ipc"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }

# Several enabled features pull OpenSSL via native-tls (kdb-plus-fixed, reqwest,
# tokio-native-tls). On Windows MSVC there is no system OpenSSL to link against,
# so the wheel build fails with "couldn't detect an OpenSSL installation".
# Declaring openssl with the `vendored` feature on Windows makes openssl-sys
# build OpenSSL from source (feature-unified across the whole graph). No effect
# on the Linux/macOS legs, which link the system OpenSSL.
[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


[package.metadata.maturin]
name = "wingfoil"
