[package]
name = "wingfoil-python"
version = "6.0.4"
authors = ["wingfoil@wingfoil.io"]
edition = "2024"
rust-version.workspace = true
publish = ["wingfoil", "crates-io"]
license = "Apache-2.0"
keywords = ["graph", "stream", "dag", "trading", "python"]
homepage = "https://github.com/wingfoil-io/wingfoil/tree/main/wingfoil-python"
documentation = "https://docs.rs/wingfoil-python"
description = "python bindings for wingfoil - graph based stream processing framework"

[lib]
name = "wingfoil"
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = ["etcd"]
etcd = ["wingfoil/etcd"]
iceoryx2 = ["wingfoil/iceoryx2"]
aeron = ["wingfoil/aeron"]

[dependencies]

# parent
wingfoil = { path = "../wingfoil", features = ["csv", "kdb", "zmq", "etcd", "fluvio", "prometheus", "otlp", "fix", "web", "kafka"] }

# workspace deps
anyhow = {workspace = true}
chrono = {workspace = true}
derive_more = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}
thiserror = {workspace = true}

# local deps
pyo3 = { version = "0.27", features = ["extension-module", "serde"] }
kdb-plus-fixed = { version = "0.5.0", features = ["ipc"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }

# Windows MSVC has none of the system C libraries these features need, so build
# them from source there. Feature-unified across the whole graph; no effect on
# the Linux/macOS legs, which link the system libraries.
#   - openssl (native-tls via kdb-plus-fixed, reqwest, tokio-native-tls):
#     `vendored` builds OpenSSL from source instead of "couldn't detect an
#     OpenSSL installation".
#   - rdkafka (kafka): `cmake-build` builds librdkafka via CMake instead of the
#     Unix-only ./configure script ("%1 is not a valid Win32 application").
# CMake is present on the windows-latest runner. (zmq needs no flag here:
# zmq-sys 0.12 always builds libzmq from source via zeromq-src/cc.)
[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
rdkafka = { version = "0.37", features = ["cmake-build"] }


[package.metadata.maturin]
name = "wingfoil"
