[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "wingfoil"
dynamic = ["version"]
description = "Python bindings for the wingfoil Rust library"
authors = [{ name = "Jake Mitchell" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
homepage = "https://github.com/wingfoil-io/wingfoil/"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "wingfoil._wingfoil"
include = ["Cargo.toml"]