[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "wingfoil"
dynamic = ["version"]
description = "Python bindings for the wingfoil Rust library"
authors = [{ name = "Jake Mitchell" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas>=1.0.0"
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
homepage = "https://github.com/wingfoil-io/wingfoil/"

[project.optional-dependencies]
dev = ["maturin>=1.4,<2.0", "pytest>=7", "pyzmq>=25"]

[tool.maturin]
# Keep `iceoryx2-beta` opt-in for Python builds. Enabling it by default can
# make wheels Linux/POSIX-only due to iceoryx2 dependencies.
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "wingfoil._wingfoil"
include = ["Cargo.toml"]

[tool.coverage.run]
source = ["wingfoil"]

[tool.coverage.report]
omit = ["*/_wingfoil*"]
