[package]
name = "wingfoil-wasm"
version = "4.0.1"
authors = ["wingfoil@wingfoil.io"]
edition = "2024"
license = "Apache-2.0"
description = "Browser-side WebAssembly codec for the wingfoil web adapter."
repository = "https://github.com/wingfoil-io/wingfoil/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wingfoil-wire-types = { path = "../wingfoil-wire-types", version = "4.0.1" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
bincode = "1.3.3"
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["panic-hook"]
panic-hook = ["dep:console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
