[package]
name = "wingfoil-wire-types"
version = "4.3.0"
authors = ["wingfoil@wingfoil.io"]
edition = "2024"
license = "Apache-2.0"
description = "Wire format types shared between the wingfoil server and the wingfoil-wasm browser client."
repository = "https://github.com/wingfoil-io/wingfoil/"
keywords = ["wingfoil", "websocket", "wasm"]

[lib]
name = "wingfoil_wire_types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
anyhow = "1.0"
