[features]
default = ["async"]
full = ["async", "csv", "kdb", "zmq", "etcd", "fluvio", "dynamic-graph-beta", "instrument-default", "iceoryx2-beta", "prometheus", "otlp", "fix", "web", "kafka"]
dynamic-graph-beta = []
kdb-integration-test = ["kdb"]
async = ["dep:tokio", "dep:futures", "dep:async-stream", "dep:futures-util", "tokio/time"]
csv = ["dep:csv"]
kdb = ["dep:kdb-plus-fixed", "dep:sha2", "dep:bincode", "async", "tokio/fs"]
zmq = ["dep:zmq", "dep:bincode"]
zmq-integration-test = ["zmq"]
zmq-etcd-integration-test = ["zmq", "etcd", "dep:testcontainers"]
zmq-cross-lang-test = ["zmq-integration-test"]
zmq-cross-lang-etcd-test = ["zmq-cross-lang-test", "zmq-etcd-integration-test"]
aeron-rusteron = ["dep:rusteron-client"]
aeron-rs = ["dep:aeron-rs"]
etcd = ["dep:etcd-client", "async"]
etcd-integration-test = ["etcd", "dep:testcontainers"]
kafka = ["dep:rdkafka", "async"]
kafka-integration-test = ["kafka", "dep:testcontainers"]
tracing = ["dep:tracing"]
instrument-run = ["tracing"]
instrument-cycle = ["tracing"]
instrument-apply-nodes = ["tracing"]
instrument-initialise = ["tracing"]
instrument-cycle-node = ["tracing"]
instrument-default = ["instrument-run", "instrument-cycle", "instrument-apply-nodes", "instrument-initialise"]
instrument-all = ["instrument-default", "instrument-cycle-node"]
fluvio = ["dep:fluvio", "async"]
fluvio-integration-test = ["fluvio", "dep:testcontainers", "dep:fluvio-controlplane-metadata"]
iceoryx2-integration-test = ["iceoryx2-beta", "dep:testcontainers"]
iceoryx2-beta = ["dep:iceoryx2"]
prometheus = ["dep:arc-swap"]
prometheus-integration-test = ["prometheus", "dep:reqwest"]
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "async"]
otlp-integration-test = ["otlp", "dep:testcontainers"]
fix = ["dep:fefix", "dep:rustls", "dep:webpki-roots"]
fix-integration-test = ["fix"]
web = ["async", "dep:axum", "dep:tower-http", "dep:tokio-tungstenite", "dep:wingfoil-wire-types", "dep:bincode", "tokio/net", "tokio/sync"]
aeron-integration-test = ["aeron-rusteron", "aeron-rs", "dep:testcontainers", "dep:libc"]

[package]
name = "wingfoil"
version = "4.3.3"
authors = ["wingfoil@wingfoil.io"]
edition = "2024"
rust-version.workspace = true
publish = ["wingfoil", "crates-io"]
license = "Apache-2.0"
keywords = ["graph", "stream", "dag", "hft", "trading"]
homepage = "https://github.com/wingfoil-io/wingfoil/"
documentation = "https://docs.rs/wingfoil"
description = "graph based stream processing framework"

[lib]
name="wingfoil"

[lints]
workspace = true

[package.metadata.docs.rs]
scrape-examples = true

[dependencies]

# derives
wingfoil-derive = { path = "../wingfoil-derive", version = "4.3.3" }

# workspace
chrono = {workspace=true}
derive_more = {workspace=true}
env_logger = {workspace=true}
log = {workspace=true}


# project
priority-queue = "2.7.0"
itertools = "0.14.0"
num = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.4"
lobster = "0.7.0"
num-traits = "0.2"
derive-new = "0.7"
serde-aux = "4.7.0"
smallvec = "1.15.1"
rand = "0.9.2"
tynm = "0.2.0"
kanal = "0.1.1"
scopeguard = "1.2.0"
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
formato = "0.3.0"
anyhow = "1.0.100"
thiserror = "2.0.11"
tinyvec = { version = "1.10.0", features = ["alloc"] }
arrayvec = { version = "0.7", features = ["serde"] }
criterion = { version = "0.8.1" }
quanta = "0.9.3"
ordered-float = "4.5.0"
bincode = { version = "1.3.3", optional = true }
sha2 = { version = "0.10", optional = true }

# optional deps gated by feature flags
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3.6", optional = true }
futures-util = { version = "0.3.31", optional = true }
csv = { version = "1.4", optional = true }
kdb-plus-fixed = { version = "0.5.0", features = ["ipc"], optional = true }
zmq = { version = "0.10.0", optional = true }
etcd-client = { version = "0.18", optional = true }
rdkafka = { version = "0.37", optional = true }
testcontainers = { version = "0.27", features = ["blocking"], optional = true }
tracing = { workspace = true, features = ["log", "attributes"], optional = true }
fluvio = { version = "0.50.1", optional = true }
fluvio-controlplane-metadata = { version = "0.50.1", optional = true }
iceoryx2 = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
arc-swap = { version = "1.7", optional = true }
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["metrics", "trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-blocking-client", "metrics", "trace"], optional = true }
fefix = { version = "0.7", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
webpki-roots = { version = "0.26", optional = true }
rusteron-client = { version = "0.1", optional = true }
aeron-rs = { version = "0.1", optional = true }

# web adapter
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
wingfoil-wire-types = { path = "../wingfoil-wire-types", version = "4.3.3", optional = true }


libc = { version = "0.2", optional = true }

[dev-dependencies]
rxrust = "1.0.0-rc.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[[example]]
name = "dynamic-group"
path = "examples/dynamic/dynamic-group/main.rs"
required-features = ["dynamic-graph-beta"]

[[example]]
name = "demux"
path = "examples/dynamic/demux/main.rs"

[[example]]
name = "dynamic-manual"
path = "examples/dynamic/dynamic-manual/main.rs"
required-features = ["dynamic-graph-beta"]

[[example]]
name = "async"
required-features = ["async"]

[[example]]
name = "order_book"
required-features = ["csv"]

[[example]]
name = "kdb_round_trip"
path = "examples/kdb/round_trip/main.rs"
required-features = ["kdb"]

[[example]]
name = "kdb_read"
path = "examples/kdb/read/main.rs"
required-features = ["kdb"]

[[example]]
name = "kdb_read_cached"
path = "examples/kdb/read_cached/main.rs"
required-features = ["kdb"]


[[example]]
name = "run_mode"

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "nanotime"
harness = false

[[bench]]
name = "bfs_vs_dfs_wingfoil"
path = "benches/bfs_vs_dfs/wingfoil.rs"
harness = false

[[bench]]
name = "bfs_vs_dfs_reactive"
path = "benches/bfs_vs_dfs/reactive.rs"
harness = false

[[bench]]
name = "bfs_vs_dfs_async_streams"
path = "benches/bfs_vs_dfs/async_streams.rs"
harness = false
required-features = ["async"]

[[bench]]
name = "iceoryx2"
harness = false
required-features = ["iceoryx2-beta"]

[[bench]]
name = "iceoryx2_modes"
harness = false
required-features = ["iceoryx2-beta"]

[[example]]
name = "prometheus"
path = "examples/telemetry/prometheus/main.rs"
required-features = ["prometheus"]

[[example]]
name = "otlp"
path = "examples/telemetry/otlp/main.rs"
required-features = ["otlp", "prometheus"]

[[example]]
name = "iceoryx2_pub"
path = "examples/iceoryx2/pub.rs"
required-features = ["iceoryx2-beta"]

[[example]]
name = "iceoryx2_sub"
path = "examples/iceoryx2/sub.rs"
required-features = ["iceoryx2-beta"]

[[example]]
name = "latency_pub"
path = "examples/latency/pub.rs"
required-features = ["iceoryx2-beta"]

[[example]]
name = "latency_sub"
path = "examples/latency/sub.rs"
required-features = ["iceoryx2-beta"]

[[example]]
name = "tracing"
path = "examples/tracing/main.rs"

[[example]]
name = "zmq_direct_pub"
path = "examples/zmq/direct/zmq_pub.rs"
required-features = ["zmq"]

[[example]]
name = "zmq_direct_sub"
path = "examples/zmq/direct/zmq_sub.rs"
required-features = ["zmq"]

[[example]]
name = "zmq_etcd_pub"
path = "examples/zmq/etcd/zmq_pub.rs"
required-features = ["zmq", "etcd"]

[[example]]
name = "zmq_etcd_sub"
path = "examples/zmq/etcd/zmq_sub.rs"
required-features = ["zmq", "etcd"]

[[example]]
name = "etcd"
path = "examples/etcd/main.rs"
required-features = ["etcd"]

[[example]]
name = "fix_client"
path = "examples/fix/fix_client.rs"
required-features = ["fix"]

[[example]]
name = "lmax_demo"
path = "examples/fix/lmax_demo.rs"
required-features = ["fix"]

[[example]]
name = "lmax_instruments"
path = "examples/fix/lmax_instruments.rs"
required-features = ["fix"]

[[example]]
name = "fix_echo_server"
path = "examples/fix/fix_echo_server.rs"
required-features = ["fix"]

[[example]]
name = "fix_loopback"
path = "examples/fix/fix_loopback.rs"
required-features = ["fix"]

[[example]]
name = "web"
path = "examples/web/main.rs"
required-features = ["web"]

[[example]]
name = "fluvio"
path = "examples/fluvio/main.rs"
required-features = ["fluvio"]

[[example]]
name = "kafka"
path = "examples/kafka/main.rs"
required-features = ["kafka"]

[[example]]
name = "latency_e2e_ws_server"
path = "examples/latency_e2e/ws_server.rs"
required-features = ["web", "iceoryx2-beta", "prometheus", "otlp"]

[[example]]
name = "latency_e2e_fix_gw"
path = "examples/latency_e2e/fix_gw.rs"
required-features = ["fix", "iceoryx2-beta"]

[[example]]
name = "aeron"
path = "examples/aeron/main.rs"
required-features = ["aeron-rusteron"]
