[features]
default = ["async"]
full = ["async", "csv", "kdb", "zmq", "etcd", "dynamic-graph-beta", "instrument-default", "iceoryx2-beta", "prometheus", "otlp", "fix"]
dynamic-graph-beta = []
kdb-integration-test = ["kdb"]
async = ["dep:tokio", "dep:futures", "dep:async-stream", "dep:futures-util", "tokio/time"]
csv = ["dep:csv"]
kdb = ["dep:kdb-plus-fixed", "dep:sha2", "dep:bincode", "async", "tokio/fs"]
zmq = ["dep:zmq", "dep:bincode"]
zmq-integration-test = ["zmq"]
zmq-etcd-integration-test = ["zmq", "etcd", "dep:testcontainers"]
zmq-cross-lang-test = ["zmq-integration-test"]
zmq-cross-lang-etcd-test = ["zmq-cross-lang-test", "zmq-etcd-integration-test"]
etcd = ["dep:etcd-client", "async"]
etcd-integration-test = ["etcd", "dep:testcontainers"]
tracing = ["dep:tracing"]
instrument-run = ["tracing"]
instrument-cycle = ["tracing"]
instrument-apply-nodes = ["tracing"]
instrument-initialise = ["tracing"]
instrument-cycle-node = ["tracing"]
instrument-default = ["instrument-run", "instrument-cycle", "instrument-apply-nodes", "instrument-initialise"]
instrument-all = ["instrument-default", "instrument-cycle-node"]
iceoryx2-integration-test = ["iceoryx2-beta", "dep:testcontainers"]
iceoryx2-beta = ["dep:iceoryx2"]
prometheus = []
prometheus-integration-test = ["prometheus", "dep:reqwest"]
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "async"]
otlp-integration-test = ["otlp", "dep:testcontainers"]
fix = ["dep:fefix", "dep:rustls", "dep:webpki-roots"]
fix-integration-test = ["fix"]

[package]
name = "wingfoil"
version = "3.3.0"
authors = ["wingfoil@wingfoil.io"]
edition = "2024"
publish = ["wingfoil", "crates-io"]
license = "Apache-2.0"
keywords = ["graph", "stream", "dag", "hft", "trading"]
homepage = "https://github.com/wingfoil-io/wingfoil/"
documentation = "https://docs.rs/wingfoil"
description = "graph based stream processing framework"

[lib]
name="wingfoil"

[package.metadata.docs.rs]
scrape-examples = true

[dependencies]

# derives
wingfoil-derive = { path = "../wingfoil-derive", version = "3.3.0" }

# workspace
chrono = {workspace=true}
derive_more = {workspace=true}
env_logger = {workspace=true}
log = {workspace=true}
lazy_static = {workspace=true}


# project
priority-queue = "2.7.0"
itertools = "0.14.0"
num = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.4"
lobster = "0.7.0"
num-traits = "0.2"
derive-new = "0.7"
serde-aux = "4.7.0"
smallvec = "1.15.1"
rand = "0.9.2"
tynm = "0.2.0"
kanal = "0.1.1"
scopeguard = "1.2.0"
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
formato = "0.3.0"
once_cell = "1.21.3"
anyhow = "1.0.100"
thiserror = "2.0.11"
tinyvec = { version = "1.10.0", features = ["alloc"] }
arrayvec = { version = "0.7", features = ["serde"] }
criterion = { version = "0.8.1" }
quanta = "0.9.3"
ordered-float = "4.5.0"
bincode = { version = "1.3.3", optional = true }
sha2 = { version = "0.10", optional = true }

# optional deps gated by feature flags
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3.6", optional = true }
futures-util = { version = "0.3.31", optional = true }
csv = { version = "1.4", optional = true }
kdb-plus-fixed = { version = "0.5.0", features = ["ipc"], optional = true }
zmq = { version = "0.10.0", optional = true }
etcd-client = { version = "0.18", optional = true }
testcontainers = { version = "0.27", features = ["blocking"], optional = true }
tracing = { workspace = true, features = ["log", "attributes"], optional = true }
iceoryx2 = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["metrics"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-blocking-client", "metrics"], optional = true }
fefix = { version = "0.7", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
webpki-roots = { version = "0.26", optional = true }


[dev-dependencies]
rxrust = "1.0.0-rc.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "dynamic-group"
path = "examples/dynamic/dynamic-group/main.rs"
required-features = ["dynamic-graph-beta"]

[[example]]
name = "demux"
path = "examples/dynamic/demux/main.rs"

[[example]]
name = "dynamic-manual"
path = "examples/dynamic/dynamic-manual/main.rs"
required-features = ["dynamic-graph-beta"]

[[example]]
name = "async"
required-features = ["async"]

[[example]]
name = "order_book"
required-features = ["csv"]

[[example]]
name = "kdb_round_trip"
path = "examples/kdb/round_trip/main.rs"
required-features = ["kdb"]

[[example]]
name = "kdb_read"
path = "examples/kdb/read/main.rs"
required-features = ["kdb"]

[[example]]
name = "kdb_read_cached"
path = "examples/kdb/read_cached/main.rs"
required-features = ["kdb"]


[[example]]
name = "run_mode"

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "nanotime"
harness = false

[[bench]]
name = "bfs_vs_dfs_wingfoil"
path = "benches/bfs_vs_dfs/wingfoil.rs"
harness = false

[[bench]]
name = "bfs_vs_dfs_reactive"
path = "benches/bfs_vs_dfs/reactive.rs"
harness = false

[[bench]]
name = "bfs_vs_dfs_async_streams"
path = "benches/bfs_vs_dfs/async_streams.rs"
harness = false
required-features = ["async"]

[[bench]]
name = "iceoryx2"
harness = false
required-features = ["iceoryx2-beta"]

[[bench]]
name = "iceoryx2_modes"
harness = false
required-features = ["iceoryx2-beta"]

[[example]]
name = "prometheus"
path = "examples/telemetry/prometheus/main.rs"
required-features = ["prometheus"]

[[example]]
name = "otlp"
path = "examples/telemetry/otlp/main.rs"
required-features = ["otlp", "prometheus"]

[[example]]
name = "iceoryx2_pub"
path = "examples/iceoryx2/pub.rs"
required-features = ["iceoryx2-beta"]

[[example]]
name = "iceoryx2_sub"
path = "examples/iceoryx2/sub.rs"
required-features = ["iceoryx2-beta"]

[[example]]
name = "tracing"
path = "examples/tracing/main.rs"

[[example]]
name = "zmq_direct_pub"
path = "examples/zmq/direct/zmq_pub.rs"
required-features = ["zmq"]

[[example]]
name = "zmq_direct_sub"
path = "examples/zmq/direct/zmq_sub.rs"
required-features = ["zmq"]

[[example]]
name = "zmq_etcd_pub"
path = "examples/zmq/etcd/zmq_pub.rs"
required-features = ["zmq", "etcd"]

[[example]]
name = "zmq_etcd_sub"
path = "examples/zmq/etcd/zmq_sub.rs"
required-features = ["zmq", "etcd"]

[[example]]
name = "etcd"
path = "examples/etcd/main.rs"
required-features = ["etcd"]

[[example]]
name = "fix_client"
path = "examples/fix/fix_client.rs"
required-features = ["fix"]

[[example]]
name = "lmax_demo"
path = "examples/fix/lmax_demo.rs"
required-features = ["fix"]

[[example]]
name = "lmax_instruments"
path = "examples/fix/lmax_instruments.rs"
required-features = ["fix"]
